Modify launch file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/Clase 01/Profe/En clase/index.js"
+      "program": "${file}"
     }
   ]
 }
